@@ -22,6 +22,11 @@ ext {
 
 application {
 	mainClassName = javaMainClass
+	applicationDefaultJvmArgs = [
+		'--add-opens', 'java.base/java.lang=ALL-UNNAMED',
+		'--add-opens', 'java.base/java.util=ALL-UNNAMED',
+		'--add-opens', 'java.desktop/com.apple.eawt=ALL-UNNAMED'
+	]
 }
 
 version='1.0'
@@ -29,9 +34,12 @@ version='1.0'
 repositories {
     // Use jcenter for resolving your dependencies.
     // You can declare any Maven/Ivy/file repository here.
-    jcenter()    
+    jcenter()
     
-    maven { url "http://clojars.org/repo/"  }
+    maven {
+        url "https://clojars.org/repo/"
+        allowInsecureProtocol = true
+    }
     
     flatDir {
        dirs 'libs'
@@ -42,6 +50,11 @@ configurations.all {
 	exclude group: "commons-logging", module: "commons-logging"
     resolutionStrategy {
         failOnVersionConflict()
+        force 'org.jboss.logging:jboss-logging:3.4.3.Final'
+        force 'org.slf4j:slf4j-api:1.7.32'
+        force 'junit:junit:4.13.2'
+        force 'org.springframework:spring-core:5.3.23'
+        force 'net.bytebuddy:byte-buddy:1.12.19'
     }
 }
 
@@ -59,31 +72,32 @@ dependencies {
 	implementation name: 'VAqua4'
 
 
-	implementation group: 'net.incongru.watchservice', name: 'barbary-watchservice', version: '1.0'
+	//implementation group: 'net.incongru.watchservice', name: 'barbary-watchservice', version: '1.0'
 	implementation 'com.squareup.okhttp3:okhttp:3.10.0'
 
 	//implementation group: 'org.slf4j', name: 'slf4j-jdk14', version: '1.7.22'
-	implementation group: 'org.slf4j', name: 'jcl-over-slf4j', version: '1.7.22'
-	implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.1'
+	implementation group: 'org.slf4j', name: 'jcl-over-slf4j', version: '1.7.32'
+	implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.12'
 	
 	//Database Connection
-	implementation group: 'org.springframework.data', name: 'spring-data-jpa', version: '1.11.0.RELEASE'	
-	implementation group: 'org.hibernate', name: 'hibernate-entitymanager', version: '4.3.5.Final'
-	implementation group: 'org.hsqldb', name: 'hsqldb', version: '1.8.0.10'
+	implementation group: 'org.springframework.data', name: 'spring-data-jpa', version: '2.7.0'
+	implementation group: 'org.hibernate', name: 'hibernate-core', version: '5.6.15.Final'
+	implementation group: 'org.hibernate', name: 'hibernate-entitymanager', version: '5.6.15.Final'
+	implementation group: 'org.hsqldb', name: 'hsqldb', version: '2.7.2'
 
 	//Utilities
-	implementation group: 'commons-lang', name: 'commons-lang', version: '2.4'
+	implementation group: 'commons-lang', name: 'commons-lang', version: '2.6'
 	implementation group: 'commons-collections', name: 'commons-collections', version: '3.2.2'
-	implementation group: 'commons-beanutils', name: 'commons-beanutils', version: '1.9.3'
+	implementation group: 'commons-beanutils', name: 'commons-beanutils', version: '1.9.4'
 	implementation (group: 'com.googlecode.soundlibs', name: 'basicplayer', version: '3.0.0.0') {
 			exclude group: 'org.slf4j'
 			exclude group: 'junit'
 	}
 
 	implementation group: 'net.java.dev.glazedlists', name: 'glazedlists_java15', version: '1.8.0'
-    implementation 'com.google.guava:guava:21.0'
-	implementation 'org.projectlombok:lombok:1.18.16'
-	annotationProcessor 'org.projectlombok:lombok:1.18.16'
+	   implementation 'com.google.guava:guava:32.1.2-jre'
+	implementation 'org.projectlombok:lombok:1.18.30'
+	annotationProcessor 'org.projectlombok:lombok:1.18.30'
 
 	implementation (group: 'eu.medsea.mimeutil', name: 'mime-util', version: '2.1.1') {
 		exclude group: 'org.slf4j'
@@ -108,17 +122,17 @@ dependencies {
     		exclude group: 'com.googlecode.soundlibs'
     }
 	implementation group: 'org.jcraft', name: 'jorbis', version: '0.0.17'
-	implementation group: 'org.clojars.aseipp', name: 'jogg', version: '0.0.7'	
+	// implementation group: 'org.clojars.aseipp', name: 'jogg', version: '0.0.7'
 
 	// for FFT transformation
 	implementation 'com.github.wendykierp:JTransforms:3.1'
     
     // Use JUnit test framework
-    testImplementation 'junit:junit:4.12'
-    testImplementation 'org.springframework:spring-test:4.3.6.RELEASE'
+    testImplementation 'junit:junit:4.13.2'
+    testImplementation 'org.springframework:spring-test:5.3.23'
     testImplementation group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
-    testImplementation group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
-	testImplementation group: 'org.assertj', name: 'assertj-swing-junit', version: '3.8.0'
+    testImplementation group: 'org.mockito', name: 'mockito-core', version: '4.11.0'
+ testImplementation group: 'org.assertj', name: 'assertj-swing-junit', version: '3.8.0'
     
     
 }
@@ -129,19 +143,20 @@ task fatJar(type: Jar) {
 
 	manifest {
         attributes(
-    			'Manifest-Version': '1.0', 
+    			'Manifest-Version': '1.0',
             'Class-Path': configurations.compileClasspath.files.collect {"$it.name"}.join(' '),
- 			'Implementation-Title': 'Tunes 4J', 
- 			'Implementation-Version': version,             
+ 			'Implementation-Title': 'Tunes 4J',
+ 			'Implementation-Version': version,
             'Main-Class': 'org.ocelot.tunes4j.Tunes4JApp'
         )
     }
     	
-    baseName = project.name + '-all'
-    from { 
-    		configurations.compileClasspath.collect { 
-    			it.isDirectory() ? it : zipTree(it) 
-    		} 
+    archiveBaseName = project.name + '-all'
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+    from {
+    		configurations.compileClasspath.collect {
+    			it.isDirectory() ? it : zipTree(it)
+    		}
     	}
     with jar
 }
